temp/current_db_tables.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/metadata.db'); cursor = conn.cursor(); cursor.execute('SELECT name FROM sqlite_master WHERE type="table"'); tables = cursor.fetchall(); print('Tables:'); for table in tables: print(f'  {table[0]}'); conn.close()
                                                                                                                                                                                                                         ^^^
SyntaxError: invalid syntax
